# labrob

./: .travis.yml  README.md  labrob.rosinstall
labrob/: CHANGELOG.rst  CMakeLists.txt  package.xml
labrob_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
labrob_control/launch/: joy_teleop.launch
labrob_control/scripts/: joy_teleop.py  key_teleop.py
labrob_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
labrob_description/config/: urdf.rviz
labrob_description/launch/: labrob_rviz.launch
labrob_description/urdf/: labrob.urdf  labrob.urdf.xacro  materials.urdf.xacro  wheel.urdf.xacro
labrob_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
labrob_gazebo/launch/: gazebo.rviz  labrob_gazebo.launch
labrob_gazebo/scripts/: localizer.py
labrob_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
labrob_msgs/msg/: StatusMessage.msg
labrob_msgs/srv/: GetMapPercentage.srv
labrob_worlds/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
labrob_worlds/launch/: aruco_marker.launch  aruco_marker.rviz  challenge_maze.launch  crazy_maze.launch
labrob_worlds/models/challenge_coins/: model.config  model.sdf
labrob_worlds/models/crazy_coins/: model.config  model.sdf
labrob_worlds/models/crazy_coins/meshes/: coin.dae
labrob_worlds/models/marker26_8cm/: model.config  model.sdf
labrob_worlds/scripts/: challenge_map_server.py  challenge_server.py
labrob_worlds/src/: coins_manager_plugin.cpp
labrob_worlds/worlds/: aruco_marker.world  challenge_maze.world
