<?xml version="1.0"?>
<package>
  <name>labrob_description</name>
  <version>0.2.0</version>
  <description>The labrob_description package</description>

  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD</license>

  <url type="website">http://www.romin.upm.es/wiki/</url>
  <url type="repository">https://github.com/fsuarez6/labrob</url>
  <author>Francisco Suarez-Ruiz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>turtlebot_description</build_depend>
  
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>turtlebot_description</run_depend>

</package>
