<?xml version="1.0"?>
<package>
  <name>labrob_gazebo</name>
  <version>0.3.0</version>
  <description>The labrob_gazebo package</description>

  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD</license>

  <url type="website">http://www.romin.upm.es/wiki/</url>
  <url type="repository">https://github.com/fsuarez6/labrob</url>
  <author>Francisco Suarez-Ruiz</author>
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>hector_gazebo_plugins</build_depend>
  <build_depend>labrob_description</build_depend>
  <build_depend>turtlebot_bringup</build_depend>
  
  <run_depend>aruco_ros</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>labrob_description</run_depend>
  <run_depend>turtlebot_bringup</run_depend>

</package>
