<?xml version="1.0"?>
<package>
  <name>labrob_msgs</name>
  <version>0.2.0</version>
  <description>The labrob_msgs package</description>

  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD</license>

  <url type="website">http://www.romin.upm.es/wiki/</url>
  <url type="repository">https://github.com/fsuarez6/labrob</url>
  <author>Francisco Suarez-Ruiz</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_runtime</run_depend> 
  
  
</package>
