<?xml version="1.0"?>
<package>
  <name>labrob_worlds</name>
  <version>0.2.0</version>
  <description>The labrob_worlds package</description>
  
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD</license>

  <url type="website">http://www.romin.upm.es/wiki/</url>
  <url type="repository">https://github.com/fsuarez6/labrob</url>
  <author>Francisco Suarez-Ruiz</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>labrob_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>labrob_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
